typescript/checker/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration10.ts.stderr
error: TS1093
 --> $DIR/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration10.ts:2:18
  |
2 |   constructor(): number { }
  |                  ^^^^^^

